# ECU_Simulator

./: .gitignore  CMakeLists.txt  README.md
include/: can.h  cli.h  ecu.h  ecu_manager.h  engine.h  fault_manager.h  logger.h  platfrom_thread.h  scheduler.h  sensors.h  system.h
src/: can.c  cli.c  ecu.c  ecu_manager.c  engine.c  fault_manager.c  logger.c  main.c  scheduler.c  sensors.c  system.c
